# mood-of-the-day

./: .derived  .gitignore  .project  .pydevproject  Dockerfile  Makefile  pyproject.toml
src/: __main__.py
src/moodoftheday/: browser.py  cli.py  config.py  cron.py  daemon.py  db.py  dt.py  mastoclient.py  web.py
stubs/: mastodon.pyi
tests/: test_browser.py  test_config.py  test_cron.py  test_db.py  test_mastoclient.py  test_web.py  testsupport.py
