[project]
name = "mood-of-the-day"
version = "0.0.0"
requires-python = "<3.13,>=3.12"
dependencies = [
    "selenium>=4.22.0",
    "Mastodon-py>=1.8.1",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/ZeeD/mood-of-the-day"
Repository = "https://github.com/ZeeD/mood-of-the-day.git"

[tool.pdm]
distribution = false

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.4.10",
    "coverage>=7.5.4",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.gui-scripts]
mood-of-the-day = "moodoftheday.cli:main"

[tool.mypy]
mypy_path = ["src", "tests", "stubs"]
strict = true
warn_unused_configs = true

[tool.ruff]
fix = true
line-length = 80
src = ["src", "tests", "stubs"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # disabled by me
    "D1","ANN1","PT009",
    # incompatibilities
    "D203", # D211
    "D213", # D212
    # conflicts with formatter
    "COM812","ISC001","Q001","Q002"
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "single"
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true

[tool.ruff.lint.isort]
force-single-line = true

[tool.coverage.run]
branch = true
source = ["src", "tests"]

[tool.coverage.report]
show_missing = true
sort = "Cover"
skip_empty = true

[tool.pdm.scripts]
_.env = { PYTHONPATH = "src:tests" }
lint = { composite = [
    "ruff format .",
    "ruff check --exit-zero .",
    "dmypy run .",
]}
tests = { composite = [
    "coverage run -m unittest discover --verbose --locals --failfast --catch --start-directory tests --top-level-directory src",
    "coverage report",
    "coverage erase"
]}
